force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/loan__Disbursal_Txn_Distribution__c.object-meta.xml
<CustomObject>
    <label>Disbursal Transaction Distribution</label>
    <nameField>
        <displayFormat>DDI-{0000000000}</displayFormat>
        <label>Disbursal Distribution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursal Transaction Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>