force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/Arcus_Failure_Response__c.field-meta.xml
<CustomField>
    <fullName>Arcus_Failure_Response__c</fullName>
    <formula>DCP_Transaction__r.Vendor_Failure_Response__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arcus Failure Response</label>
    <type>Text</type>
</CustomField>