force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/Arcus_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Arcus_Transaction_Id__c</fullName>
    <description>contains dcp arcus transaction id</description>
    <label>Arcus Transaction Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>