force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/Arcus_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Arcus_Transaction_Status__c</fullName>
    <description>confirmed or rejected</description>
    <label>Arcus Transaction Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>