force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/DCP_Arcus_Transaction__c.field-meta.xml
<CustomField>
    <fullName>DCP_Arcus_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DCP Arcus Transaction</label>
    <referenceTo>DCp_Arcus_Transactions__c</referenceTo>
    <relationshipLabel>Disbursal Transaction Distributions</relationshipLabel>
    <relationshipName>Disbursal_Transaction_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>