force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/DCP_Callout_successful__c.field-meta.xml
<CustomField>
    <fullName>DCP_Callout_successful__c</fullName>
    <formula>DCP_Transaction__r.DCP_Callout_successful__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCP Callout successful</label>
    <type>Checkbox</type>
</CustomField>