force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__ACH_Filename__c.field-meta.xml
<CustomField>
    <fullName>loan__ACH_Filename__c</fullName>
    <label>ACH Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>