force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>loan__Bank_Account__c</referenceTo>
    <relationshipLabel>Disbursal Transaction Distributions</relationshipLabel>
    <relationshipName>Txn_Distribution_Bank_Account</relationshipName>
    <type>Lookup</type>
</CustomField>