force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__Distribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Distribution_Amount__c</fullName>
    <label>Distribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>