force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Distribution_Type__c</fullName>
    <label>Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disbursement</fullName>
                <default>true</default>
                <label>Disbursement</label>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Pre-Paid Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>