force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__Fee__c.field-meta.xml
<CustomField>
    <fullName>loan__Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee</label>
    <referenceTo>loan__Fee__c</referenceTo>
    <relationshipLabel>Disbursal Transaction Distributions</relationshipLabel>
    <relationshipName>Disbursal_Transaction_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>