force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__Internal_Accounting_Reversal_Generated__c.field-meta.xml
<CustomField>
    <fullName>loan__Internal_Accounting_Reversal_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Reversal Accounting Entry for  this transaction is created or not.</description>
    <inlineHelpText>Indicates if Reversal Accounting Entry for  this transaction is created or not.</inlineHelpText>
    <label>Internal Accounting Reversal Generated</label>
    <type>Checkbox</type>
</CustomField>