force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__Loan_Disbursal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Disbursal_Transaction__c</fullName>
    <label>Loan Disbursal Transaction</label>
    <referenceTo>loan__Loan_Disbursal_Transaction__c</referenceTo>
    <relationshipLabel>Disbursal Transaction Distributions</relationshipLabel>
    <relationshipName>Disbursal_Transaction_Distribution</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>