force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__Name_of_Entity__c.field-meta.xml
<CustomField>
    <fullName>loan__Name_of_Entity__c</fullName>
    <inlineHelpText>Name of Entity</inlineHelpText>
    <label>Name of Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>