force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__Reference__c.field-meta.xml
<CustomField>
    <fullName>loan__Reference__c</fullName>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>