force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__Reversed__c.field-meta.xml
<CustomField>
    <fullName>loan__Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ticked, if the parent disbursal transaction is reversed or rejected.</inlineHelpText>
    <label>Reversed</label>
    <type>Checkbox</type>
</CustomField>