force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__Sent_To_ACH__c.field-meta.xml
<CustomField>
    <fullName>loan__Sent_To_ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ticked, when the disbursal distribution is processed by the ACH file generation</inlineHelpText>
    <label>Sent To ACH</label>
    <type>Checkbox</type>
</CustomField>