force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__Sent_To_ACH_On__c.field-meta.xml
<CustomField>
    <fullName>loan__Sent_To_ACH_On__c</fullName>
    <inlineHelpText>Date when the disbursal distribution was sent for ACH Processing</inlineHelpText>
    <label>Sent To ACH On</label>
    <type>Date</type>
</CustomField>