force-app/main/default/objects/loan__Disbursal_Txn_Distribution__c/fields/loan__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Date__c</fullName>
    <formula>loan__Loan_Disbursal_Transaction__r.loan__Disbursal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>